[tool.poetry]
name = "kevinmalone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
python-dotenv = "^0.19.1"
boto3 = "^1.20.5"
py-cord = {git = "git@github.com:Pycord-Development/pycord.git", rev = "92f26c2f6d02abaa926f1c3fed22d77ebb0f4fd2"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
