[tool.poetry]
name = "kevinmalone"
version = "0.1.0"
description = ""
authors = ["christinevandev <54376653+christinevandev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
